[package]
name = "pk-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.18.0" }

secp256k1 = { version = "0.24.0", all-features = true, features = [
    "rand",
    "recovery",
] }
# used by secp
rand = { version = "0.8.5", features = ["getrandom"] }
hex = "0.4.3"
sha3 = "0.10.5"
